[gd_scene load_steps=10 format=2]

[ext_resource path="res://HeldItem/HeldItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://HeldItem/Axe/Axe.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/axe.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/Axe/axe_cut_audio_stream_random_pitch.tres" type="AudioStream" id=4]
[ext_resource path="res://Assets/Fonts/GiantRobotArmy-Medium.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Themes/main_theme.tres" type="Theme" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 100 )

[sub_resource type="Animation" id=2]
resource_name = "rotate"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -70.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -45, 0 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AxeCutSound")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.3 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("Label:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -150, 40 ), Vector2( -150, -130 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Label:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.741176, 0.741176, 0.741176, 1 ), Color( 0.486275, 0.168627, 0, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Label:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotate_right"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 70.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 45, 0 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AxeCutSound")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.3 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("Label:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Label:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.741176, 0.741176, 0.741176, 1 ), Color( 0.486275, 0.168627, 0, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Label:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 130, 40 ), Vector2( 130, -130 ) ]
}

[node name="Axe" instance=ExtResource( 1 )]
rotation = 0.0
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
scale = Vector2( 1, 1 )
texture = ExtResource( 3 )
offset = Vector2( -45, 0 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 87, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
playback_speed = 2.0
anims/rotate = SubResource( 2 )
anims/rotate_right = SubResource( 3 )

[node name="AxeCutSound" type="AudioStreamPlayer2D" parent="." index="3"]
stream = ExtResource( 4 )

[node name="Label" type="Label" parent="." index="4"]
visible = false
self_modulate = Color( 0.486275, 0.168627, 0, 1 )
margin_left = -150.0
margin_top = -130.0
margin_right = -110.0
margin_bottom = -89.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 5 )
text = "+1"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_Axe_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Axe_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
